/* 
  Localizable.strings
  Permanent

  Created by Adrian Creteanu on 23/09/2020.
*/

"Accept" = "Accept";
"AddLater" = "You can always add this later.";
"AlreadyMember" = "Already have an account?";
"AuthenticationCancelled" = "Authentication was cancelled by application.";
"AuthenticationContextNotSet" = "Context not set for local authentication.";
"AuthenticationFailed" = "Authentication failed.";
"AuthenticationInteractionFailed" = "Authentication failed because interaction is disabled.";
"AuthenticationLocked" = "Biometry is now locked because of too many failed attempts. Passcode is required to unlock biometry.";
"AuthenticationNotEnrolled" = "Local authentication not enrolled.";
"AuthenticationTimedOut" = "Local authentication timed out.";
"BiometricsReason" = "Authenticate to log into your Permanent account.";
"Cancel" = "Cancel";
"CopyrightText" = "© The Permanent Legacy Foundation 2020";
"Decline" = "Decline";
"Delete" = "Delete";
"Email" = "Email";
"EmailAlreadyUsed" = "This email is already in use.";
"EmailSent" = "An email with instructions to change your password has been sent at %@.";
"EnterCode" = "Enter the verification code";
"EnterEmail" = "Enter your email here";
"EnterVerificationCode" = "Enter verification code";
"Error" = "Error";
"ErrorMessage" = "Something went wrong. Please try again later.";
"ForgotPassword" = "Forgot Password?";
"FullName" = "Full Name";
"HardwareUnavailable" = "Hardware unavailable for local authentication.";
"IncorrectCredentials" = "Incorrect username or password.";
"InvalidFields" = "The entered data is invalid";
"InvalidPhone" = "The phone number is invalid";
"Login" = "Log in";
"MFARequired" = "Two factor authentication required.";
"Next" = "Next";
"Ok" = "Ok";
"Password" = "Password";
"ResetPassword" = "Reset your password";
"Signup" = "Sign Up";
"Skip" = "Skip";
"Submit" = "Submit";
"Success" = "Success";
"TermsConditions" = "Terms and Conditions";
"TokenExpired" = "The code has expired.";
"TokenIncorrect" = "The code is incorrect.";
"TwoStepSubtitle" = "Add an extra layer of security by entering a verification code we send to your phone.";
"TwoStepTitle" = "Protect your account with 2-Step Verification";
"UnlockWithBiometrics" = "Unlock with %@";
"UseLoginCredentials" = "Use login credentials instead";
"UsePasscode" = "Use passcode";
"WelcomeMessage" = "Nice to see you again";
"BiometricsSetup" = "Permanent works best with %@ and requires a passcode.";
"MyFiles" = "Private Files";
"UploadFilesMessage" = "Files in your archive appear here first.\nClick the “+” button below to upload files.";
"EmptyFolderMessage" = "This folder is empty";
"Name" = "Name";
"Upload" = "Upload";
"NewFolder" = "New Folder";
"Browse" = "Browse Files";
"PhotoLibrary" = "Photo Library";
"Waiting" = "Waiting...";
"CreateFolder" = "Create New Folder";
"Create" = "Create";
"FolderName" = "Folder Name";
"Uploads" = "Uploads";
"TakePhotoOrVideo" = "Take Photo or Video";
"SearchFiles" = "Search Files";
"CameraErrorMessage" = "Could not process the recorded media file.";
"Download" = "Download";
"Copy" = "Copy";
"Move" = "Move";
"Publish" = "Publish";
"Edit" = "Edit";
"Share" = "Share";
"Downloads" = "Downloads";
"CannotUpload" = "Cannot upload selected files.";
"Date" = "Date";
"FileType" = "File Type";
"Ascending" = "ascending";
"Descending" = "descending";
"CopyHere" = "Copy here";
"MoveHere" = "Move here";
"Shares" = "Shares";
"Public" = "Public";
"Relationships" = "Relationships";
"Member" = "Member";
"Apps" = "Apps";
"ManageArchives" = "Tap here to manage archives";
"GetShareLink" = "Get share link";
"ShareLink" = "Share link";
"ShareDescription" = "Send this link via text, email, or other message service to invite people to share this content.";
"LinkCopied" = "Link copied";
"CopyLink" = "Copy";
"ManageLink" = "Manage";
"Revoke" = "Revoke";
"Link" = "Link";
"Save" = "Save";
"Done" = "Done";
"SharePreview" = "Share preview";
"MaxNumberUses" = "Max numbers of uses";
"ExpirationDate" = "Expiration date";
"Optional" = "Optional";
"AutoApprove" = "Auto approve";
"NoSharesMessage" = "This item is not shared with any archives";
"ArchiveName" = "The %@ Archive";
"FromThisArchive" = "From this archive";
"WithThisArchive" = "With this archive";
"ShareActionMessage" = "You haven’t shared any content with anyone. Choose an item from My Files and share it with someone!";
"Add" = "Add";
"LogOut" = "Log Out";
"AutoApproveTooltip" = "Automatically approve requests for access to this share.";
"MaxUsesTooltip" = "This link will disappear after the max number of uses has been reached.";
"ExpDateTooltip" = "This link will disappear after the expiration date has been reached.";
"File" = "File";
"Copied" = "Copied";
"Moved" = "Moved";
"Owner" = "Owner";
"Manager" = "Manager";
"Curator" = "Curator";
"Editor" = "Editor";
"Contributor" = "Contributor";
"Viewer" = "Viewer";
"None" = "None";
"OwnerTooltipText" = "Manager plus permission to add new members and change owners.";
"ManagerTooltipText" = "Curator plus all file and folder permissions and permission to modify membership.";
"CuratorTooltipText" = "Editor plus permission to move, copy and delete records.";
"EditorTooltipText" = "Contributor plus permission to edit record metadata and to change folder views.";
"ContributorTooltipText" = "Viewer plus permission to create file and folder records (e.g. upload only).";
"ViewerTooltipText" = "A member with permission to view records only";
"Oldest" = "Oldest";
"Newest" = "Newest";
"LinkSettings" = "Link Settings";
"AccessLevel" = "Access Level";
"SharedBy" = "Shared by %@";
"FromArchive" = "From the %@ Archive";
"RequestApproval" = "Request Approval";
"RemoveMember" = "Remove member?";
"Remove" = "Remove";
"Pending" = "Pending";
"IncorrectOldPassword" = " Current password is incorrect. Please try again.";
"LowPasswordComplexity" = "Password must be at least 8 characters in length.";
"PasswordMatchError" = "Passwords must match.";
"PasswordChangedSuccessfully" = "Password updated.";
"Security" = "Security";
"AccountInfo" = "Account";
"UpdatePassword" = "Update Password";
"CurrentPassword" = "Current Password";
"ReTypePassword" = "Re-type New Password";
"NewPassword" = "New Password";
"RequestAwaitingApproval" = "Your request is awaiting approval";
"ViewInArchive" = "View in archive";
"AddStorage" = "Storage";
"GiveAGig" = "Give a gig, get a gig";
"InviteInfo" = "Invite your friends and family and both of your accounts will be credited with one free gigabyte of storage when they sign up.\n\nOffer valid for the first 10 accepted invitations only.";
"SendInvite" = "Send New Invite";
"Resend" = "Resend";
"YourInvitations" = "Your Invitations";
"Invitations" = "Invitations";
"Send" = "Send";
"SendInvitation" = "Send Invitation";
"RecipientInfo" = "Recipient %@";
"ActivityFeed" = "Activity Feed";
"LogInWithBiometrics" = "Log in with Fingerprint/Face ID?";
"LogInWith" = "Log in with ";
"LogInFaceId" = "Face ID?";
"LogInTouchId" = "Touch ID?";
"TwoStepVerification" = "Two-Step Verification?";
"InviteSent" = "Invite sent";
"InviteRevoked" = "Invite revoked";
"LinkNotAvailable" = "This link is no longer available";
"Approve" = "Approve";
"Deny" = "Deny";
"AccountName" = "Account Name";
"PrimaryEmail" = "Primary Email";
"MobilePhone" = "Mobile Phone";
"Address" = "Address";
"City" = "City";
"StateOrRegion" = "State or region";
"PostalCode" = "Postal Code";
"Country" = "Country";
"SaveInfo" = "Save Info";
"UserDetailsChangedSuccessfully" = "Updates were saved";
"GetUserDetailsWasSuccessfully" = "User details were received";
"EmptyNameField" = "Account name can't be empty.";
"NoDataModification" = "No modifications were done";
"EmailFieldIsEmpty" = "Email field is invalid";
"ApproveShareRequest" = "Existing share updated";
"DenyShareRequest" = "Share Deleted";

/// Errors
"ErrorCancelled" = "Request has been cancelled.";
"ErrorUnknown" = "Some unknown error has occured. Please try again.";
"ErrorServer" = "Server error has occured. Please try again.";
"DownloadCancelled" = "Download cancelled";
