...
                GradientArchiveButtonView(action: {
                    presentSelectArchivesType = true
                }, archiveType: $viewModel.containerViewModel.archiveType)
                Spacer()
            }
            HStack(alignment: .center) {
                SmallRoundButtonImageView(type: .noColor, imagePlace: .onLeft, text: "Back", image: Image(.leftArrowShort), action: backButton)
                SmallRoundButtonImageView(text: "Next", action: nextButton)
            }
            .padding(.bottom, 40)
        }
        .sheet(isPresented: $presentSelectArchivesType, content: {
            OnboardingSelectArchiveTypeView(viewModel: OnboardingSelectArchiveTypeViewModel(containerViewModel: viewModel.containerViewModel))
...
