...
    case launch
    case welcomePage
    case members
    case share
    case accountInfo
    case invitations
    case settings
    case archives
    case profile
    case donate
    case archiveSettings
    case legacyPlanning
    
...
